--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
+    "sitemap-generator": "^8.5.1",
     "swiper": "^11.2.1"
   },
   "devDependencies": {
